--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "^52.0.11",
@@ -34,6 +36,7 @@
     "expo-web-browser": "~14.0.1",
     "immer": "^10.1.1",
     "lottie-react-native": "7.1.0",
+    "lucide-react-native": "^0.468.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
