--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "backgroundColor": "#FFFFFF", 
+    "backgroundColor": "#FFFFFF",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -33,6 +33,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e44b9b84-8e46-4470-9f78-bbbae8b04264"
+      }
+    },
+    "owner": "juan2569"
   }
 }
